wip--fixes some alignment issues

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,10 +2,6 @@ header {
   width: 100vw;
   background-color: black;
   color: white;
-  h1,
-  h2 {
-    padding-left: 10vw;
-  }
   h1 {
     margin-top: 3rem;
     padding-bottom: 1.5rem;
@@ -16,11 +12,9 @@ header {
 }
 
 .logo {
-  &:last-child {
-    position: relative;
-    bottom: -2px;
-    svg {
-      transform: scale(-1);
-    }
+  position: relative;
+  bottom: -2px;
+  svg {
+    transform: scaleY(-1);
   }
 }
