--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,5 +1,4 @@
 @mixin nav-link {
-  display: block;
   text-decoration: none;
   text-align: center;
   color: white;
